# fastapi-celery-template

./: .env  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  main.py  requirements.txt
celery/: Dockerfile  celery_worker.py  requirements.txt
