[tool.poetry]
name = "fastapi-middleware"
version = "0.1.0"
description = "test fastapi middleware"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.105.0"}
celery = "^5.3.6"
flower = "^2.0.1"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
